--- a/css/styles.css
+++ b/css/styles.css
@@ -76,27 +76,31 @@ font-style: normal;
 
 
 /*hero part*/
+.section-hero {
+background-color: #2e2f42;
+}
 .hero {
 font-weight: 700;
 font-size: 56px;
-line-height: 1.07143;
+line-height: 1.07;
 letter-spacing: 0.02em;
 text-align: center;
-color: #fff;
-background-color: #2e2f42;
+color: #ffffff;
 }
+
 .hero-btn {
-   font-family: inherit;
-   background-color: #4d5ae5;
+   font-family: "Roboto", sans-serif;
+   background-color: #4D5AE5;
    font-weight: 500;
    font-size: 16px;
    line-height: 1.5;
    letter-spacing: 0.04em;
-   color: #fff;
+   color: #ffffff;
+   cursor: pointer;
 }
 .hero-btn:hover, 
 .hero-btn:focus {
-   background-color: #404bbf;
+   background-color: #404BBF;
 }
 
 /*Section Advantages*/
