--- a/css/styles.css
+++ b/css/styles.css
@@ -15,174 +15,40 @@
       color: #434455;
       ;
    }
-/* #menunav */
- .logo {
-   font-family: Raleway, sans-serif;
-   font-weight: 700;
-   font-size: 18px;
-   line-height: 1.17;
-   letter-spacing: 0.03em;
-   text-transform: uppercase;
-   color: #4d5ae5;
- }
-
- .logo-text {
-   color: #2e2f42;
- }
- 
-
- /*menunav*/
- .header {
-   background-color: #E7E9FC;
- }
- 
- .nav-header a {
- 
-}
-
-.header-nav-link {
-   font-weight: 500;
-   font-size: 16px;
-   line-height: 1.5;
-   letter-spacing: 0.02em;
-   color: #2e2f42;
-}
-
-.header-nav-link:hover, 
-.header-nav-link:focus {
-   color: #404bbf;
-}
-
-.header-nav-item {
-  
-}
-.contact-info {
-font-style: normal;
-}
-
-.contact-info-list {
-font-weight: 400;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color: #434455;
-font-style: normal;
-}
-
-.contact-info-list:hover,
-.contact-info-list:focus {
-   color: #404bbf;
-}
-
-
-/*hero part*/
-.section-hero {
-background-color: #2e2f42;
-}
-.hero {
-font-weight: 700;
-font-size: 56px;
-line-height: 1.07;
-letter-spacing: 0.02em;
-text-align: center;
-color: #ffffff;
-}
-
-.hero-btn {
-   font-family: "Roboto", sans-serif;
-   background-color: #4D5AE5;
-   font-weight: 500;
-   font-size: 16px;
-   line-height: 1.5;
-   letter-spacing: 0.04em;
-   color: #ffffff;
-   cursor: pointer;
-}
-.hero-btn:hover, 
-.hero-btn:focus {
-   background-color: #404BBF;
-}
-
-/*Section Advantages*/
-.advantages {
-}
-.advantages-list-main {
-}
-.advantages-list {
-}
-.advantages-list-item {
-   font-weight: 500;
-   font-size: 20px;
-   line-height: 1.2;
-   letter-spacing: 0.02em;
-   color: #2e2f42;
-}
-.advantages-list-descr {
-font-weight: 400;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color: #434455;
-}
- 
-/*Section team*/
-    
-.team-section {
-}
-.team-title-main {
-font-weight: 700;
-font-size: 36px;
-line-height: 1.11;
-letter-spacing: 0.02em;
-text-align: center;
-color: #2e2f42;
-}
-.team-title-list {
-}
-.team-title-list-item {
-}
-.team-title-list-photo {
-}
-.team-member-name {
-   font-weight: 500;
-font-size: 20px;
-line-height: 1.2;
-letter-spacing: 0.02em;
-text-align: center;
-color: #2e2f42;
-}
-.team-member-name-desr {
-font-weight: 400;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-text-align: center;
-color: #434455;
-}
-/*footer*/
-.section-footer {
-   background-color: #2e2f42;
-
-}
 .logo {
-   font-family: Raleway, sans-serif;
-   font-weight: 700;
-   font-size: 18px;
-   line-height: 1.17;
-   letter-spacing: 0.03em;
-   text-transform: uppercase;
-   color: #4d5ae5;
- }
-
- .logo-text-footer {
-color: #f4f4fd;
- 
- }
- 
-.section-footer-descr {
+font-family: "Raleway", sans-serif;
+font-weight: 700;
+font-size: 18px;
+line-height: 1.17;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+color: #4d5ae5;
+}
+.logo-text {
+   color: #2e2f42;
+}
+.header-nav-link {
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #2e2f42;
+}
+.header-nav-link:hover,
+.header-nav-link:focus {
+   color: #404bff;
+}
+.contact {
+   font-style: normal;
+}
+.contact-one {
 font-weight: 400;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
-color: #f4f4fd;
+color: #434455;
+} 
+.contact-one:hover,
+.contact-one:focus {
+   color: #404bff;
 }
