--- a/css/styles.css
+++ b/css/styles.css
@@ -38,17 +38,15 @@ color: #2e2f42;
 .header-nav-link:focus {
    color: #404bff;
 }
-.contact {
+
+.address-link{
+   font-size: 16px;
+   line-height: 1.5;
+   letter-spacing: 0.02em;
+   color: #434455;
    font-style: normal;
 }
-.contact-one {
-font-weight: 400;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color: #434455;
-} 
-.contact-one:hover,
-.contact-one:focus {
-   color: #404bff;
+.address-link:focus, 
+.address-link:hover {
+   color: #404BBF;
 }
