--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,7 @@ color: #2e2f42;
 .header-nav-link:focus {
    color: #404bbf;
 }
-.contact_details {
+.contact-details {
    font-style: normal;
 }
 
@@ -78,4 +78,116 @@ color: #2e2f42;
 .hero-btn:hover,
 .hero-btn:focus {
    background-color: #404BBF;
+}
+
+.advantages-section {
+}
+.advantages-list-name {
+
+}
+.advantages-list-main {
+}
+.advantages-list {
+}
+.advantages-list-item {
+   font-weight: 500;
+font-size: 20px;
+line-height: 1.2;
+letter-spacing: 0.02em;
+color: #2e2f42;
+}
+.advantages-list-descr {
+font-weight: 400;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #434455;
+}
+
+.team-section {
+   background-color: #f4f4fd;
+}
+.team-title-main {
+font-weight: 700;
+font-size: 36px;
+line-height: 1.11;
+text-align: center;
+letter-spacing: 0.02em;
+text-transform: capitalize;
+color: #2e2f42;
+}
+.team-title-list {
+}
+.team-title-list-item {
+   background-color: #ffffff;
+}
+.team-member-name {
+   font-weight: 500;
+font-size: 20px;
+line-height: 1.2;
+letter-spacing: 0.02em;
+text-align: center;
+color: #2e2f42;
+}
+.team-member-name-desr {
+   font-weight: 400;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+text-align: center;
+color: #434455;
+}
+
+.portfolio-section {
+}
+.portfolio-section-title {
+font-weight: 700;
+font-size: 36px;
+line-height: 1.11;
+text-align: center;
+letter-spacing: 0.02em;
+text-transform: capitalize;
+color: #2e2f42;
+
+}
+.portfolio-section-list {
+
+}
+.portfolio-list-item {
+   font-weight: 500;
+font-size: 20px;
+line-height: 1.2;
+letter-spacing: 0.02em;
+color: #2e2f42;
+}
+.portfolio-list-description {
+   font-weight: 400;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #434455;
+}
+
+.section-footer {
+   background-color: #2e2f42;
+}
+.logo {
+   font-family: Raleway, sans-serif;
+   font-weight: 700;
+   font-size: 18px;
+   line-height: 1.17;
+   letter-spacing: 0.03em;
+   text-transform: uppercase;
+   color: #4d5ae5;
+}
+.logo-text-footer {
+   color: #f4f4fd;
+}
+.section-footer-descr {
+   font-family: "Roboto", sans-serif;
+   font-weight: 400;
+   font-size: 16px;
+   line-height: 1.5;
+   letter-spacing: 0.02em;
+   color: #f4f4fd;
 }
